--- a/usage.html
+++ b/usage.html
@@ -18,7 +18,7 @@
 <p>
 	Documentation of the TYPO3 is written in reStructuredText format. The reStructuredText (frequently abbreviated as reST) is a
 	lightweight markup language intended to be highly readable in source format. By the means of processors, reST
-	documentation can be rendered into various formats for printing or screen,
+	documentation can be rendered to various formats for printing or screen,
 	such as PDF, ePub, HTML...
 </p>
 
@@ -34,13 +34,13 @@
 	 At the end of the installation, read the help from the command directly:
 
 	<pre>
-	$ get-the-docs help
+	$ get-the-docs.phar help
 	</pre>
 
 	You will be able to generate the docs in one command.
 
 	<pre>
-	$ get-the-docs render PATH/TO/EXTENSION
+	$ get-the-docs.phar render PATH/TO/EXTENSION
 	</pre>
 
 	<a style="font-weight: bold" href="service-cli.html">read more</a>...
@@ -81,11 +81,13 @@
 
 </p>
 
-<!--<h2>Resources</h2>-->
-<!--<ul>-->
-	<!--<li><a href="/">ReST documentation template</a></li>-->
-	<!--<li><a href="/">Complex example (zip)</a></li>-->
-<!--</ul>-->
+<!-- ********************** -->
+<h2>Forge project</h2>
+
+<p>
+	There is a <a href="http://forge.typo3.org/projects/get-the-docs">Forge project</a> to <a href="http://forge.typo3.org/projects/get-the-docs/issues">collect</a> features and issues.
+</p>
+
 </body>
 
 </html>
