--- a/service-convert.html
+++ b/service-convert.html
@@ -64,7 +64,7 @@
 
 						// true means the format can be sent
 						if (check) {
-							loading = '<div style="font-weight: bold"><img id="img-loading" src="http://www.webscriptlab.com/file/loading/output/133975532033.gif" alt="" />'
+							loading = '<div style="font-weight: bold"><img id="img-loading" src="loading.gif" alt="" />'
 							loading += '<span style="position:relative; bottom: 18px; left: 10px">Operation can take a little while...</span></div>';
 							$('#doc-result-box').html(loading);
 						}
@@ -106,6 +106,9 @@
 <div id="doc-result-box">
 
 </div>
+
+<p>Please report any trouble you may encounter to the <a href="http://forge.typo3.org/projects/get-the-docs/issues">bug
+	tracker</a>. Don't forget to to attach the faulty file.</p>
 
 
 </body>
