--- a/service-render.html
+++ b/service-render.html
@@ -51,20 +51,21 @@
 					// Prevent double submission
 					if ($('#img-loading').length == 0) {
 
+						// @todo remove me in 6 months - 13.12.2012
 						// Clean up GUI, first
 						$('#field-doc-name-error').remove();
 
-						// Check value fields
-						if ($('#field-doc-name').val() != '') {
+						//Check value fields
+						if ($('#field-zip-file').val() != '') {
 							check = true;
 						}
 						else {
-							$('#label-field-doc-name').after('<span id="field-doc-name-error" style="color: red"> - missing value!</span>');
+							$('#label-field-zip-file').after('<span id="field-doc-name-error" style="color: red"> - missing value!</span>');
 						}
 
 						// true means the format can be sent
 						if (check) {
-							loading = '<div style="font-weight: bold"><img id="img-loading" src="http://www.webscriptlab.com/file/loading/output/133975532033.gif" alt="" />'
+							loading = '<div style="font-weight: bold"><img id="img-loading" src="loading.gif" alt="" />'
 							loading += '<span style="position:relative; bottom: 18px; left: 10px">Operation can take a little while...</span></div>';
 							$('#doc-result-box').html(loading);
 						}
@@ -93,13 +94,13 @@
 		<fieldset class="fieldset">
 			<legend></legend>
 			<div class="doc-box-field">
-				<label for="field-zip-file">Zip file (cf. <a href="#file_structure">File Structure</a>)</label> <br/>
+				<label for="field-zip-file" id="label-field-zip-file">Zip file (cf. <a href="#file_structure">File Structure</a>)</label> <br/>
 				<input id="field-zip-file" type="file" name="zip_file">
 			</div>
-			<div class="doc-box-field">
-				<label for="field-doc-name" id="label-field-doc-name">Documentation name</label> <br/>
-				<input id="field-doc-name" type="text" name="doc_name" value="" placeholder="Documentation name"/>
-			</div>
+			<!--<div class="doc-box-field">-->
+				<!--<label for="field-doc-name" id="label-field-doc-name">Documentation name</label> <br/>-->
+				<!--<input id="field-doc-name" type="text" name="doc_name" value="" placeholder="Documentation name"/>-->
+			<!--</div>-->
 		</fieldset>
 		<fieldset class="fieldset">
 			<fieldset>
@@ -135,6 +136,11 @@ Documentation.zip
     `-- Images
 </pre>
 
+
+<h3 id="trouble">Trouble shooting</h3>
+
+<p>Please report any trouble you may encounter to the <a href="http://forge.typo3.org/projects/get-the-docs/issues">bug
+	tracker</a>. Don't forget to to attach the faulty Zip file.</p>
 
 </body>
 
