[BUGFIX] Fix a few bugs
* Fix message in the client when action does not exist
* Improve file resolution in Phar context
* Remove meaningless info from conf.py
* Update Readme file

Change-Id: Id3d4f7b36dfd2a5170db50a946b491a87bae78eb
Reviewed-on: https://review.typo3.org/17154
Reviewed-by: Fabien Udriot
Tested-by: Fabien Udriot

--- a/service-cli.html
+++ b/service-cli.html
@@ -26,7 +26,7 @@ This script will help you in generating TYPO3 documentation from the command lin
 	can be achieved from the command line with:
 <pre>
 	cd PATH
-	curl -s http://docs.typo3.org/getthedocs/download.php > get-the-docs.phar;
+	curl -s http://docs.typo3.org/getthedocs/download.php > get-the-docs.phar
 	chmod 755 get-the-docs.phar
 	./get-the-docs.phar
 </pre>
