--- a/service-convert.html
+++ b/service-convert.html
@@ -107,6 +107,8 @@
 
 </div>
 
+<h3 id="trouble">Trouble shooting</h3>
+
 <p>Please report any trouble you may encounter to the <a href="http://forge.typo3.org/projects/get-the-docs/issues">bug
 	tracker</a>. Don't forget to to attach the faulty file.</p>
 
