--- a/usage.html
+++ b/usage.html
@@ -31,10 +31,12 @@
 	refer to this <a href="service-cli.html">page</a>.
 </p>
 <p>
-	 At the end of the installation, read the help from the command directly:
+	 In a nutshell:
 
 	<pre>
-	$ get-the-docs.phar help
+	$ curl -s http://docs.typo3.org/getthedocs/download.php > get-the-docs.phar
+	$ chmod 755 get-the-docs.phar
+	$ ./get-the-docs.phar
 	</pre>
 
 	You will be able to generate the docs in one command.
